# ATLAS

./: .gitignore  README.md  documentation.md  intent.toml  justfile  mkdocs.yml  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  pages.yml
atlas/: __init__.py  cli.py  data_quality.py  disambiguate.py  evaluate.py  models.py  normalize.py  observability.py  parse.py  pipeline.py  safety_review.py  segment.py  sequence.py  trace_log.py  validate.py
data/gold/: readback_pairs.v0.jsonl  safety_baseline.noisy.json  v0_ambiguity_slice.jsonl  v0_noisy_slice.jsonl  v0_region_phraseology_apac_slice.jsonl  v0_region_phraseology_slice.jsonl  v0_sequence_slice.jsonl  v0_slice.jsonl
docs/: adjudication-ownership-policy.md  data-quality-adjudication.md  datasets.md  documentation.md  examples.md  future-improvements.md  glossary.md  index.md  integration-examples.md  migration-v0.1-to-v0.2.md  ml-terms.md  phraseology-conventions.md  safety-limitations-playbook.md
docs/contracts/: atlas.intent.v0.1.md
docs/integration/: downstream_consumer_example.py
tests/: conftest.py  test_data_quality.py  test_evaluate.py  test_observability.py  test_observability_logging.py  test_pipeline.py  test_readback.py  test_reports.py  test_safety_review.py  test_sequence.py
