[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS deterministic ATC intent parser baseline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
include = ["atlas*"]
exclude = ["data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
